8253728: tests fail with "assert(fr.is_compiled_frame()) failed: Wrong frame type"